Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-12697

Block selection cursor doesn't indent last line on tab

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • Qt Creator 3.6.0
    • Qt Creator 3.2.0-rc1
    • Editors
    • None
    • Windows 7, Linux
    • aab3b0f

    Description

      Steps to reproduce

      1. File -> New file or project -> C++ -> C++ source file
      2. Add some lines:

      #define a 0x01
      #define b 0x02
      #define c 0x04
      #define d 0x08
      

      3. Change the defines to an enum:

      3a)

      enum bits {
      #define a 0x01
      #define b 0x02
      #define c 0x04
      #define d 0x08
      };
      

      3b)

      Do a block selection around all #defines, press backspace to delete the '#define', press tab.

      4. Result (d is not intended):

      enum bits {
          a 0x01
          b 0x02
          c 0x04
      d 0x08
      };
      

      Expected:

      enum bits {
          a 0x01
          b 0x02
          c 0x04
          d 0x08
      };
      

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-12697
        # Subject Branch Project Status CR V

        Activity

          People

            davschul David Schulz
            aha_1980 André Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes